@@ -17,7 +17,8 @@ const std::string Shell::CMD_LIST[] = {
 	"remove"    , 
 	"backup"    ,
 	"restore"   ,
-	"ls_backup" ,
+	"ls_backup" , "lsb"      ,
+	"rm_backup" , "rmb"      ,
 	"q"         , "exit"     , 
 	"h"         , "help"
 };
@@ -91,7 +92,12 @@ bool Shell::launch(std::string&& cmd) throw(std::invalid_argument){
 			this->restore();
 			break;
 		case LS_BACKUP:
+		case LSB:
 			this->ls_backup();
+			break;
+		case RM_BACKUP:
+		case RMB:
+			this->rm_backup();
 			break;
 		case Q:
 		case EXIT:
@@ -196,11 +202,20 @@ inline void Shell::backup(){
 }
 
 inline void Shell::restore(){
-	action.doRestoreWorkLogFile();
+	int selectId = this->getInput<int>("backup ID");
+	if(selectId != 0)
+		action.doRestoreWorkLogFile(selectId);
+	else
+		std::cout << "Aborted." << std::endl;
+	std::cout << std::endl;
 }
 
 inline void Shell::ls_backup(){
 	action.doLsBackupWorkLogFile();
+}
+
+inline void Shell::rm_backup(){
+	//TODO
 }
 
 inline void Shell::help(){
@@ -214,6 +229,10 @@ inline void Shell::help(){
 	          << "[edit]:"                   << "\t\t\t\t" << "Edit WorkLog"                                << std::endl
 	          << "[reedit n] or [revise n]:" << '\t'       << "Re Edit WorkLog by given ID"                 << std::endl
 	          << "[remove n]:"               << "\t\t\t"   << "Remove WorkLog by given ID"                  << std::endl
+	          << "[backup]:"                 << "\t\t\t"   << "Backup Database file"                        << std::endl
+	          << "[restore n]:"              << "\t\t\t"   << "Restore Database file from backed up files"  << std::endl
+	          << "[ls_backup] or [lsb]:"     << "\t\t"     << "List up Backup files"                        << std::endl
+	          << "[rm_backup n] or [rmb n]:" << '\t'       << "Remove Backup file by given fileID"          << std::endl
 	          << "[q] or [exit]:"            << "\t\t\t"   << "Exiting Shell"                               << std::endl
 	          << "[h] or [help]:"            << "\t\t\t"   << "View This Help"                              << std::endl
 	          << std::endl;
