@@ -15,3 +15,6 @@ Its command is a "find" and "search".
 2014-03-27
 Shell's command line argument half corresponded.
 exam: [$ diary list] to list view.
+
+2014-03-29
+Various functions of Backup relation were added.
